# fastapi-ex1

./: Dockerfile  README.md  creatures.http  models.py  pyproject.toml
app/: app.py
tests/: test_creatures.py
